--- a/page2.html
+++ b/page2.html
@@ -12,10 +12,12 @@
 <body>
 
   
-  <h1>Testing webapp</h1>  
-  <a href="page2.html" class="list-group-item list-group-item-action active" aria-current="true">
-    Ir a pagina 2
-  </a>
+  <h1>Pagina 2</h1>  
+  
+    <a href="Index.html" class="list-group-item list-group-item-action active" aria-current="true">
+      Regresar al inicio
+    </a>
+  <button type="button" class="btn btn-primary w-50">Entar</button>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </body>
